force-app/main/default/objects/GFH_Student__c/GFH_Student__c.object-meta.xml
<CustomObject>
    <label>Student</label>
    <pluralLabel>Students</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>