force-app/main/default/objects/GFH_Student__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <label>Cohort</label>
    <type>Lookup</type>
    <referenceTo>GFH_Cohort__c</referenceTo>
    <relationshipName>Students</relationshipName>
    <relationshipLabel>Students</relationshipLabel>
</CustomField>