force-app/main/default/objects/GFH_Student__c/fields/LearningMetric_10__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_10__c</fullName>
    <label>Learning Metric 10</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>