force-app/main/default/objects/GFH_Student__c/fields/LearningMetric_13__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_13__c</fullName>
    <label>LearningMetric 13</label>
    <type>Text</type>
    <length>255</length>
</CustomField>