force-app/main/default/objects/GFH_Student__c/fields/LearningMetric_21__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_21__c</fullName>
    <label>Learning Metric 21</label>
    <type>Date</type>
</CustomField>